--- a/index.html
+++ b/index.html
@@ -4,10 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>To-do List</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header><h1>To-do List</h1></header>
-    <main></main>
-    <footer></footer>
+    <main>
+      <div id="myDIV" class="header">
+        <h1>To-Do List</h1>
+        <input
+          type="text"
+          id="myInput"
+          placeholder="Type your task and then click on the ADD button"
+        />
+        <span onclick="newElement()" class="addBtn">Add</span>
+      </div>
+
+      <ul id="myUL">
+        <li>Your tasks will go here</li>
+      </ul>
+    </main>
+    <script src="./script.js"></script>
   </body>
 </html>
